logs/ltsa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ltsa'...
Compiling './lib/python3.5/site-packages/ltsa/_local_tangent_space_alignment.py'...
***   File "./lib/python3.5/site-packages/ltsa/_local_tangent_space_alignment.py", line 255
    print "Trying to cache " + str(memory_req)+"Gb of predictions."
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ltsa/testing'...
Compiling './lib/python3.5/site-packages/ltsa/testing/test_debugscript.py'...
***   File "./lib/python3.5/site-packages/ltsa/testing/test_debugscript.py", line 18
    print np.mean((OutputR-Ypred)**2)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ltsa/testing/test_ltsamodule.py'...
***   File "./lib/python3.5/site-packages/ltsa/testing/test_ltsamodule.py", line 47
    print "Running unit tests for LTSAModuleTestCase (this may take a while)"
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ltsa/testing/test_preimage.py'...
***   File "./lib/python3.5/site-packages/ltsa/testing/test_preimage.py", line 67
    print "test_util()"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ltsa/testing/test_utils.py'...
***   File "./lib/python3.5/site-packages/ltsa/testing/test_utils.py", line 57
    print "Running unit tests for UtilsTestCase"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ltsa/utils'...
Listing './lib/python3.5/site-packages/ltsa-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
